--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -1,4 +1,4 @@
-name: Deploy to Github Pages
+name: Github Pages
 
 on:
   push:
@@ -11,12 +11,25 @@ jobs:
 
     steps:
       - uses: actions/checkout@v2
-      - uses: actions/setup-node@v1
+
+      - name: Setup Node
+        uses: actions/setup-node@v2.1.0
         with:
           node-version: '14.x'
+
+      - name: Cache dependencies
+        uses: actions/cache@v2
+        with:
+          path: ~/.npm
+          key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
+          restore-keys: |
+            ${{ runner.os }}-node-
+
       - run: npm ci
       - run: npm run build
-      - name: GitHub Pages v3
-        uses: peaceiris/actions-github-pages@v3.1.12
+
+      - name: Deploy
+        uses: peaceiris/actions-gh-pages@v3
         with:
-          publish_dir: build # optional, default is public
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          publish_dir: ./dist
